--- a/public/template/backend/template.ini
+++ b/public/template/backend/template.ini
@@ -11,6 +11,7 @@ fileCss[]	= "my-style.css"
 
 
 dirJs		= "js"
+fileJs[]	= "notify.min.js"
 fileJs[]	= "adminlte.min.js"
 fileJs[]	= "custom.js"
 
@@ -18,8 +19,10 @@ fileJs[]	= "custom.js"
 dirPlugins = "plugins"
 
 filePluginCss[] = "fontawesome-free/css/all.min.css"
+filePluginCss[] = "sweetalert2/sweetalert2.min.css"
 
 filePluginJs[] = "jquery/jquery.min.js"
 filePluginJs[] = "bootstrap/js/bootstrap.bundle.min.js"
+filePluginJs[] = "sweetalert2/sweetalert2.all.min.js"
 
 dirImg		= "images"
