--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,7 @@ RewriteRule tai-khoan.html              index.php?module=frontend&controller=use
 RewriteRule thay-doi-mat-khau.html      index.php?module=frontend&controller=user&action=changePassword
 RewriteRule lich-su-mua-hang.html       index.php?module=frontend&controller=user&action=orderHistory
 RewriteRule dang-xuat.html              index.php?module=frontend&controller=user&action=logout
+RewriteRule them-vao-gio-hang.html      index.php?module=frontend&controller=index&action=order
 
 RewriteRule ([A-Za-z0-9_-]+)-([0-9]+)\.html 		index.php?module=frontend&controller=book&action=list&category_id=$2
 RewriteRule	([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)-([0-9]+)-([0-9]+)\.html 		index.php?module=frontend&controller=book&action=detail&category_id=$3&book_id=$4
